--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,17 @@
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
+    <!-- Media permissions for photos/videos (Android 13+) -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    
+    <!-- Legacy storage permission for older Android versions -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
+        android:maxSdkVersion="32" />
 
     <application
+        android:name=".BuddyLynkApplication"
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -30,6 +39,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Buddylynk">
+        
+        <!-- AdMob App ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6164570294408123~3341387661"/>
         
         <activity
             android:name=".MainActivity"
@@ -57,6 +71,41 @@
                 <data
                     android:scheme="https"
                     android:host="app.buddylynk.com"
+                    android:pathPrefix="/user" />
+                <data
+                    android:scheme="https"
+                    android:host="app.buddylynk.com"
+                    android:pathPrefix="/invite" />
+            </intent-filter>
+            
+            <!-- Android App Links for buddylynk.com (main domain for Google Ads) -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Root URL - opens app from buddylynk.com homepage -->
+                <data
+                    android:scheme="https"
+                    android:host="buddylynk.com" />
+                <data
+                    android:scheme="https"
+                    android:host="www.buddylynk.com" />
+                <!-- Deep links into specific content -->
+                <data
+                    android:scheme="https"
+                    android:host="buddylynk.com"
+                    android:pathPrefix="/post" />
+                <data
+                    android:scheme="https"
+                    android:host="buddylynk.com"
+                    android:pathPrefix="/user" />
+                <data
+                    android:scheme="https"
+                    android:host="www.buddylynk.com"
+                    android:pathPrefix="/post" />
+                <data
+                    android:scheme="https"
+                    android:host="www.buddylynk.com"
                     android:pathPrefix="/user" />
             </intent-filter>
             
